--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html><html lang="en"><head>
-    <script src="p5.js"></script>
+<!DOCTYPE html><html><head>
+    <script src="p5.min.js"></script>
+    <script src="p5.dom.min.js"></script>
     <script src="p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
 
   </head>
   <body>
-    <script src="sketch.js"></script>
-  
-
+    <script src="sketch-constelations-bigger-stars.js"></script>
 </body></html>
